--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,21 @@
-/* You can add global styles to this file, and also import other style files */
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap');
+
+:root{
+    --box-shadow: 0 0 30px 6px rgb(31 51 73 / 10%);
+    --background-color: #EDECEE;
+}
+
+html body {
+    margin:0;
+    padding:0;
+    font-family: 'Inter', sans-serif !important;
+    font-size: 16px; // base rem
+    background-color: var(--background-color);
+}
+
+
+// MAPBOX OVERRIDES
+
+.mapboxgl-popup-content {
+    box-shadow: var(--box-shadow)!important;
+}
