integrated moh data

--- a/src/app/primary-content/primary-content.component.html
+++ b/src/app/primary-content/primary-content.component.html
@@ -1,5 +1,8 @@
 <div id=primary-wrapper>
     <div id=page-title>90 Percent</div>
-    <div class=test></div>
-    <div class=test2></div>
+    <div class=tile> 
+        <div class=drag-bar></div>
+        <app-dhb-cell *ngFor="let summary of dhbService.dhbSummaries$ | async;" [dhbSummary]="summary"></app-dhb-cell>
+    </div>
+    
 </div>
