--- a/src/styles.scss
+++ b/src/styles.scss
@@ -11,6 +11,7 @@ html body {
     font-family: 'Inter', sans-serif !important;
     font-size: 16px; // base rem
     background-color: var(--background-color);
+    transition: all 0.2s;
 }
 
 
