--- a/src/app/dhb-cell/dhb-cell.component.scss
+++ b/src/app/dhb-cell/dhb-cell.component.scss
@@ -7,6 +7,9 @@
     &:hover {
         background-color: #f7f7f7;
     }
+    &:active {
+        background-color: #F1F1F1;
+    }
 
     & .dhb-cell-status {
         & div {
