refined some stuff for mobile view

--- a/src/app/primary-content/primary-content.component.html
+++ b/src/app/primary-content/primary-content.component.html
@@ -3,7 +3,7 @@
     <div id=page-title>90 Percent</div>
     <div id=menu-bar>
         <div class=menu-item routerLink="/vaccinations" routerLinkActive="selected">Vaccinations</div>
-        <div class=menu-item routerLink="/locationsOfInterest" routerLinkActive="selected">Locations of Interest</div>
+        <div class=menu-item routerLink="/locationsOfInterest" routerLinkActive="selected">Locations</div>
         <div class=menu-item routerLink="/about" routerLinkActive="selected">About</div>
     </div>
     <div class=tile> 
@@ -14,7 +14,7 @@
     <div class="tile actions"> 
         <button (click)="navigateToInfoPage()">Learn about vaccine safety</button>
         <button (click)="navigateToBookVaccinePage()" id=vaccine-button>Book my vaccine now</button>
-        
+
     </div>
     
 </div>
