--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -25,7 +25,7 @@
             flex-grow: 1;
             width: 100vw;
             height: auto;
-            background: linear-gradient(to top, var(--background-color) 98%, transparent);
+            background: linear-gradient(to top, var(--background-color) calc(100% - 2rem), transparent);
         }
     }
 
