details view added

--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -5,5 +5,5 @@
     <br><br>
     Map data provided by <a href="https://datafinder.stats.govt.nz/layer/87883-district-health-board-2015/"> Stats NZ</a>. Mapbox is used for mapping
     <br><br>
-    Please get vaxxed. Kia Kaha
+    Please get vaxed. Kia Kaha
 </p>
