--- a/src/app/dhb-cell/dhb-cell.component.html
+++ b/src/app/dhb-cell/dhb-cell.component.html
@@ -1,4 +1,4 @@
-<div class=dhb-cell>
+<div class=dhb-cell (click)="navigateToDhbVaccinations()">
     <div class=dhb-cell-status>
         <div></div>
      </div>
