updated data. Map clickable

--- a/src/app/dhb-cell/dhb-cell.component.html
+++ b/src/app/dhb-cell/dhb-cell.component.html
@@ -20,7 +20,7 @@
                 </div>
             </div>
             <div class=dhb-cell-text>
-                <strong> {{ dhbSummary?.getMoreUntil90Percent() }} </strong> more until 90%
+                <strong> {{ dhbSummary?.getMoreUntil90Percent() | number }} </strong> more until 90%
             </div>
         </div>
     </div>
