--- a/src/app/dhb-vaccinations/dhb-vaccinations.component.scss
+++ b/src/app/dhb-vaccinations/dhb-vaccinations.component.scss
@@ -7,7 +7,7 @@
         border-bottom: solid 1px #e2e2e2;
 
         & .back {
-            background: url(/assets/arrow-left.svg) no-repeat top left;
+            background: url(/90Percent/assets/arrow-left.svg) no-repeat top left;
             background-size: contain;
             width: 1.3rem;
             height: 1.3rem;
